syntax = "proto3";

option csharp_namespace = "GrpcServiceA";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  // Sends a greeting
  rpc SayHi (HiRequest) returns (HiReply);
   // Sends a greeting
  rpc SayHelloWorld (HelloWorldRequest) returns (HelloWorldReply);
       // Sends a greeting
  rpc SayHelloWorld1 (HelloWorldRequest) returns (HelloWorldReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message HiRequest {
  string name1 = 1;
}

// The response message containing the greetings.
message HiReply {
  string message1 = 1;
}
// The request message containing the user's name.
message HelloWorldRequest {
  string name2 = 1;
}

// The response message containing the greetings.
message HelloWorldReply {
  string message2 = 1;
}

